--- a/user-dev.yml
+++ b/user-dev.yml
@@ -23,6 +23,11 @@ spring:
         formatSql: true
         id:
           newGeneratorMappings: true
+  zipkin:
+    baseUrl: http://zipkin.development.svc.cluster.local:9411
+  sleuth:
+    sampler:
+      percentage: 0.2
 eureka:
   client:
     registerWithEureka: true
