--- a/hystrix-dev.yml
+++ b/hystrix-dev.yml
@@ -4,8 +4,9 @@ spring:
   application:
     name: HYSTRIX
 turbine:
+  aggregator:
+    clusterConfig: DEFAULT
   appConfig: USER-SERVICE,CLIENT-SERVICE
-  clusterNameExpression: "'default'"
 eureka:
   client:
     registerWithEureka: true
