--- a/oauth-dev.yml
+++ b/oauth-dev.yml
@@ -15,7 +15,7 @@ eureka:
     serviceUrl:
       defaultZone: http://eureka.development.svc.cluster.local:8761/eureka/
   instance:
-    preferIpAddress: false
+    preferIpAddress: true
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     leaseRenewalIntervalInSeconds: 3
     leaseExpirationDurationInSeconds: 5
