--- a/hystrix-dev.yml
+++ b/hystrix-dev.yml
@@ -13,5 +13,5 @@ eureka:
     serviceUrl:
       defaultZone: http://eureka.development.svc.cluster.local:8761/eureka/
   instance:
-    preferIpAddress: false
+    preferIpAddress: true
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
