--- a/apigw-dev.yml
+++ b/apigw-dev.yml
@@ -38,7 +38,8 @@ eureka:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
     leaseRenewalIntervalInSeconds: 3
     leaseExpirationDurationInSeconds: 5
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 120000
+# hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 120000
+hystrix.command.default.execution.timeout.enabled: false
 ribbon:
   ConnectTimeout: 3000
   ReadTimeout: 60000
