--- a/hystrix-ide.yml
+++ b/hystrix-ide.yml
@@ -11,7 +11,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://eureka.k8s.com/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: false
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
