--- a/oauth-ide.yml
+++ b/oauth-ide.yml
@@ -2,7 +2,7 @@ server:
   port: 8280
 spring:
   application:
-    name: oauth-service
+    name: OAUTH-SERVICE
   zipkin:
     baseUrl: http://zipkin.development.svc.cluster.local:9411
   sleuth:
